PP-031 製造指図一括発行

--- a/pp-s4apps01/zproductionorderrelease/ui5-mock.yaml
+++ b/pp-s4apps01/zproductionorderrelease/ui5-mock.yaml
@@ -1,5 +1,3 @@
-# yaml-language-server: $schema=https://sap.github.io/ui5-tooling/schema/ui5.yaml.json
-
 specVersion: "3.1"
 metadata:
   name: pp.zproductionorderrelease
@@ -9,7 +7,7 @@ server:
     - name: fiori-tools-proxy
       afterMiddleware: compression
       configuration:
-        ignoreCertError: false # If set to true, certificate errors will be ignored. E.g. self-signed certificates will be accepted
+        ignoreCertError: false
         ui5:
           path:
             - /resources
@@ -19,6 +17,7 @@ server:
           - path: /sap
             url: https://my412552-api.s4hana.cloud.sap
             destination: UMC_Dev_Customizing_BTP
+            authenticationType: BasicAuthentication
     - name: fiori-tools-appreload
       afterMiddleware: compression
       configuration:
@@ -31,8 +30,12 @@ server:
         mountPath: /
         services:
           - urlPath: /sap/opu/odata/sap/ZUI_PRODUCTIONORDER_O2
+            generateMockData: true
+            metadataXmlPath: ./webapp/localService/metadata.xml
+            mockdataRootPath: ./webapp/localService/data
+          - urlPath: /sap/opu/odata/sap/ZUI_PRODUCTIONORDER_O2/
             metadataPath: ./webapp/localService/metadata.xml
-            mockdataPath: ./webapp/localService/data
+            mockdataPath: ./webapp/localService/mockdata
             generateMockData: true
         annotations:
           - localPath: ./webapp/localService/ZUI_PRODUCTIONORDER_O2_VAN.xml
