--- a/pp-s4apps01/zproductionorderrelease/webapp/manifest.json
+++ b/pp-s4apps01/zproductionorderrelease/webapp/manifest.json
@@ -100,7 +100,14 @@
             "@i18n": {
                 "type": "sap.ui.model.resource.ResourceModel",
                 "uri": "i18n/i18n.properties"
-            }
+            },
+            "local": {
+                "type": "sap.ui.model.json.JSONModel",
+                "preload": true,
+                "settings": {
+                    "defaultBindingMode": "OneWay"
+                }
+              }
         },
         "resources": {
             "css": []
