PP-025 製造指図と受注の割当管理

--- a/pp-s4apps01/mta.yaml
+++ b/pp-s4apps01/mta.yaml
@@ -91,6 +91,10 @@ modules:
       - ppzledversioninfo.zip
       name: ppzledversioninfo
       target-path: resources/
+    - artifacts:
+      - ppzmfgorderassignso.zip
+      name: ppzmfgorderassignso
+      target-path: resources/
 - name: ppzbomupload
   type: html5
   path: zbomupload
@@ -193,6 +197,16 @@ modules:
 - name: ppzledversioninfo
   type: html5
   path: zledversioninfo
+  build-parameters:
+    build-result: dist
+    builder: custom
+    commands:
+    - npm install
+    - npm run build:cf
+    supported-platforms: []
+- name: ppzmfgorderassignso
+  type: html5
+  path: zmfgorderassignso
   build-parameters:
     build-result: dist
     builder: custom
