PP-025 製造指図と受注の割当管理

--- a/pp-s4apps01/zmfgorderassignso/webapp/manifest.json
+++ b/pp-s4apps01/zmfgorderassignso/webapp/manifest.json
@@ -49,6 +49,7 @@
           "semanticObject": "zmfgorderassignso",
           "action": "display",
           "title": "{{flpTitle}}",
+          "icon": "sap-icon://request",
           "signature": {
             "parameters": {},
             "additionalParameters": "allowed"
@@ -181,5 +182,8 @@
   "sap.cloud": {
     "public": true,
     "service": "pp-s4apps01"
+  },
+  "sap.platform.cf": {
+    "ui5VersionNumber": "1.120.18"
   }
 }
