--- a/pp-s4apps01/zmfgorderassignso/ui5.yaml
+++ b/pp-s4apps01/zmfgorderassignso/ui5.yaml
@@ -16,7 +16,7 @@ server:
             - /test-resources
           url: https://ui5.sap.com
         backend:
-          - authenticationType: reentranceTicket # SAML support for vscode
+          - authenticationType: SAMLAssertion # SAML support for vscode
             path: /sap
             url: https://my412552-api.s4hana.cloud.sap
             destination: UMC_Dev_Customizing
