20241017 SD010 SD011売上・検収突合プラットフォーム

--- a/sd-s4apps01/salesacceptance/webapp/manifest.json
+++ b/sd-s4apps01/salesacceptance/webapp/manifest.json
@@ -47,10 +47,19 @@
     "crossNavigation": {
       "inbounds": {
         "sourcelistupload-display": {
-          "semanticObject": "sourcrlistupload",
+          "semanticObject": "salesacceptance",
           "action": "display",
           "title": "{{flpTitle}}",
           "icon": "sap-icon://upload",
+          "signature": {
+            "parameters": {},
+            "additionalParameters": "allowed"
+          }
+        },
+        "salesacceptance-display": {
+          "semanticObject": "salesacceptance",
+          "action": "display",
+          "title": "{{flpTitle}}",
           "signature": {
             "parameters": {},
             "additionalParameters": "allowed"
