20241017 MM-003_購買発注一括変更

--- a/mm-s4apps01/pochange/webapp/manifest.json
+++ b/mm-s4apps01/pochange/webapp/manifest.json
@@ -37,11 +37,10 @@
     },
     "crossNavigation": {
       "inbounds": {
-        "sourcelistupload-display": {
-          "semanticObject": "sourcrlistupload",
+        "pochange-display": {
+          "semanticObject": "pochange",
           "action": "display",
           "title": "{{flpTitle}}",
-          "icon": "sap-icon://upload",
           "signature": {
             "parameters": {},
             "additionalParameters": "allowed"
