20241018 MM-015 購買申請登録とファイル添付 配置修改

--- a/mm-s4apps01/uploadpurchasereq/webapp/manifest.json
+++ b/mm-s4apps01/uploadpurchasereq/webapp/manifest.json
@@ -57,7 +57,8 @@
                         "additionalParameters": "allowed"
                     },
                     "semanticObject": "uploadpurchasereq",
-                    "action": "display"
+                    "action": "display",
+                    "icon": "sap-icon://upload"
                 }
             }
         }
