PP-003 部品使用先一覧レポート 20241019

--- a/pp-s4apps01/mta.yaml
+++ b/pp-s4apps01/mta.yaml
@@ -95,6 +95,10 @@ modules:
       - ppzmfgorderassignso.zip
       name: ppzmfgorderassignso
       target-path: resources/
+    - artifacts:
+      - ppzcomponentusagelist.zip
+      name: ppzcomponentusagelist
+      target-path: resources/
 - name: ppzbomupload
   type: html5
   path: zbomupload
@@ -206,6 +210,15 @@ modules:
 - name: ppzmfgorderassignso
   type: html5
   path: zmfgorderassignso
+  build-parameters:
+    build-result: dist
+    builder: custom
+    commands:
+    - npm run build:cf
+    supported-platforms: []
+- name: ppzcomponentusagelist
+  type: html5
+  path: zcomponentusagelist
   build-parameters:
     build-result: dist
     builder: custom
