--- a/sd-s4apps01/creditmantable/webapp/manifest.json
+++ b/sd-s4apps01/creditmantable/webapp/manifest.json
@@ -57,7 +57,9 @@
     }
   },
   "sap.ui5": {
-    "flexEnabled": true,
+  
+    "flexEnabled": false,
+    
     "dependencies": {
       "minUI5Version": "1.120.18",
       "libs": {
