--- a/pp-s4apps01/ofpartition/webapp/manifest.json
+++ b/pp-s4apps01/ofpartition/webapp/manifest.json
@@ -45,6 +45,7 @@
         "ofpartition-display": {
           "semanticObject": "ofpartition",
           "action": "display",
+          "icon": "sap-icon://request",
           "signature": {
             "parameters": {},
             "additionalParameters": "allowed"
@@ -146,5 +147,8 @@
   "sap.cloud": {
     "public": true,
     "service": "pp-s4apps01"
+  },
+  "sap.platform.cf": {
+    "ui5VersionNumber": "1.120.18"
   }
 }
