--- a/pp-s4apps01/zmfgorderinfo/ui5.yaml
+++ b/pp-s4apps01/zmfgorderinfo/ui5.yaml
@@ -19,6 +19,7 @@ server:
           - path: /sap
             url: https://my412552-api.s4hana.cloud.sap
             destination: UMC_Dev_Customizing_BTP
+            authenticationType: BasicAuthentication
     - name: fiori-tools-appreload
       afterMiddleware: compression
       configuration:
