--- a/mm-s4apps01/podataanalysis/webapp/manifest.json
+++ b/mm-s4apps01/podataanalysis/webapp/manifest.json
@@ -125,7 +125,7 @@
                 "@com.sap.vocabularies.UI.v1.LineItem": {
                   "tableSettings": {
                     "type": "GridTable",
-                    "enableExport": false
+                    "enableExport": true
                   },
                   "actions": {
                     "savefilename": {
